some more css fixes with dark mode

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -250,16 +250,6 @@ button.create-button:hover {
 	box-shadow: inset 0 0 8px var(--magma-glow);
 }
 
-.author {
-	font-size: 0.85rem;
-	color: var(--text-secondary);
-	margin-top: 0.5rem;
-	text-shadow: 0 0 4px var(--magma-glow);
-	text-align: center;
-	color: rgb(215, 44, 14);
-}
-
-/* THEME TOGGLE BUTTON */
 .theme-toggle {
 	position: fixed;
 	top: 1rem;
